--- a/teddy3.html
+++ b/teddy3.html
@@ -88,7 +88,7 @@
   </div>
 
   <h1>Hug Sent Successfully 💖</h1>
-  <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgQ3fZ-tVgzcPQSGpMLgjqY_LfyIfPqj1oYfQR_MgHDdyFO09W0XjiDneyIXu1Yrxf-qA0o9Dj3eB3Hs_UIvjBK0N6Wn2C_5dMNvgUaxqtBVNOSGeMeMqQC2YBa4wftDcgEKgbdLzqINzy3aG8aMnuqc0MxZ5Pe-_OyWDI_vNGAGMJXKKZoCQp7SgypZDY" class="teddy" alt="Teddy Hug">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhGoYGJBT-QyKS7JHpEhYMKRDIyQNfmy2PVmpb4BjjdBuoOIgM3SJ15-AEEmbSduVGCrhnu59GT4x2VISKCEmdoh3b3aLRfoVJNB0lNcR1tZn87hCK_GCRsBTogcZMG48rumMk9RQFBCNEWvTNZBvQ3gC3adPuaqUXSy_Jr4O7bYOFhje6dUpOtyYx-4v4/s3464/1000098384.png" class="teddy" alt="Teddy Hug">
   <p>
     Elle, your hug just flew across oceans 🌏 and landed with love 💌<br>
     Remember, no matter how far — you're always close in heart.
