--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="decor center-left">🦋</div>
   <div class="decor center-right">🌷</div>
 
-  <img src="fcf99a9f-a62d-4ef8-af97-724ca9c1954b.png" alt="Teddy for Elle" class="teddy" />
+  <img src="https://blogger.googleusercontent.com/img/a/AVvXsEh9sruMNFQsQWKrh7hPrqMVFQbUyLnR_oUszk91V999uBUtgrVOiHBwxOb-WmL_xACncFiDrZRm7h-2HiExb_Eyfe_FGlEacA7tdQJl5cdj8oxyY30L8gXkLaIrBIxhusEkgZ8ktA7RWeAXcCmQz89ZVQ78C7PA-BAv8eMWxAR9kAr-jYkLKnkwlEX0t0I" alt="Teddy for Elle" class="teddy" />
 
   <h1>I’m Here to Hug You, Elle 🧸</h1>
 
